syntax = "proto3";

package file.v1;


import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/api/httpbody.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "file.v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  host: "yyuck.com";
  schemes: HTTPS;
};

service FileService {
  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/file.v1.FileService/files"
    };
  }
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/file.v1.FileService/files/{id}"
    };
  }
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/file.v1.FileService/files",
      body: "*"
    };
  }
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      patch: "/file.v1.FileService/files/{id}",
      body: "*"
    };
  }
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/file.v1.FileService/files/{id}",
    };
  }
}

// File item
message File {
  int32 id = 1; // id
  google.api.HttpBody http_body = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}
// New File item
message NewFile {
  // The raw HTTP body is bound to this field.
  google.api.HttpBody http_body = 1;
}

message ListRequest {}
message ListResponse {
  repeated File files = 1;
}

message GetRequest {
  int32 id = 1;
}
message GetResponse {
  File file = 1;
}

message CreateRequest {
  NewFile file = 1;
}
message CreateResponse {
  File file = 1;
}

message UpdateRequest {
  int32 id = 1;
  NewFile file = 2;
}
message UpdateResponse {
  File file = 1;
}

message DeleteRequest {
  int32 id = 1;
}
message DeleteResponse {
}
